--- a/src/scss/components.scss
+++ b/src/scss/components.scss
@@ -8,13 +8,27 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
+    
     
     &__options{
         display: flex;
+        align-items: flex-start;
 
         &__item{
             padding: 0.75rem;
-            margin-left: 1.25rem;
+            margin-left: 1.75rem;
+            text-decoration: none;
+            cursor: pointer;
+            transition: font-weight 0.1s;
+        }
+
+        &__item:hover{
+            font-weight: 400;
+        }
+
+        &__item:visited{
+            color: black;
         }
         .contact{
             font-weight: 400;
@@ -24,11 +38,70 @@
             color: var(--primary-color);
             transition: background-color 0.25s, color 0.25s;
         }
+        .contact:visited{
+            color: var(--primary-color);
+        }
         .contact:hover{
             color: white;
             background-color: var(--primary-color);
         }
     }
+
+    .dropdown{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        justify-content: space-around;
+
+        .hidden{
+            opacity: 0;
+            pointer-events: none;
+            height: 0;
+        }
+        
+        &__options{
+            display: flex;
+            flex-direction: column;
+            color: black;
+            text-decoration: none;
+            list-style: none;
+            position: absolute;
+            top: 5rem;
+            right:10rem;
+            background-color: #dfdfdf;
+            border-radius: 5px;
+            opacity: 1;
+            
+            //pointer-events: none;
+            transition: all 0.25s ease;
+
+            &__item{
+                padding: 1rem 3rem;
+            }
+            &__item:visited, &__item:link{
+                color: black;
+                list-style: none;
+                text-decoration: none;
+                
+            }
+            &__item:hover{
+                background-color: #bdbdbd;
+            }
+        }
+
+        
+        /*
+        &__link:focus-within + ul{
+            opacity: 1;
+            pointer-events: all;
+        }
+        &__link:hover + ul{
+            opacity: 1;
+            pointer-events: all;
+        }
+        */
+    }
+
 }
 
 .main{
@@ -48,14 +121,35 @@
     }
 
     &__avatar{
-        height: 25rem;
-        width: 25rem;
+        height: 30rem;
+        width: 30rem;
         border-radius: 50%;
     }
 
     &__links{
         display: flex;
         margin: 2rem;
+        align-items: center;
+
+        &__container{
+            margin: 3rem 3rem 6rem 4rem ;
+            padding: 0.8rem;
+            background-color: #fff;
+            border-radius: 40%;
+            transition: background-color 0.25s;
+        }
+        &__container:hover{
+            background-color: #bdbdbd;
+        }
+
+        &__img{
+            height: 2.5rem;
+            width: 2.5rem;    
+        }
+        .scholar{
+            height: 2.75rem;
+            width: 2.75rem;
+        }
     }
 
     &__about{
@@ -78,5 +172,80 @@
             padding-bottom: 15rem;
             
         }
+    }
+}
+/////////////////////////////////////////////////
+//// Projects
+
+.projects{
+    .navbar{
+        &__title{    
+            text-align: center;
+            color: black;
+            font-size: 260%;
+            font-weight: bold;
+            padding-top: 8rem;
+        }   
+        height: 20rem;
+
+        background-color: white;
+    }
+    &__grid{
+        margin: 2% 10%;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+        gap: 15px;
+        position: relative;
+    }
+
+    &__item{
+        
+        width: 30rem;
+        margin: 0 5%;
+        background-color: #f7f5f5;
+
+        &__header{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            &__github{
+                height: 2rem;
+                width: 2rem;
+                margin: 1rem 2rem;
+            }
+            &__folder{
+                height: 3.5rem;
+                width: 3.5rem;
+                margin: 1rem 2rem;
+            }
+           
+        }
+
+        &__title{
+            font-size: 180%;
+            font-weight: 800;
+            margin: 1rem 2rem;
+            //color: #38d1cf;
+            color: #545865;
+        }
+
+        &__description{
+            font-size: 140%;
+            font-weight: 600;
+            margin: 1rem 2rem;
+            color: #8892b0;
+        }
+
+        &__keywords{
+            display: flex;
+            color: #8892b0;
+            font-size: 120%;
+            font-weight: 300;
+            font-style: italic;
+            & p{
+                margin-left: 1.5rem;
+            }
+        }
+            
     }
 }
