--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -1,6 +1,7 @@
 
 :root{
     --primary-color: #7510f7;
+    --primary-color2: #64ffda;
     --color-primary-light: #FF3366;
     --color-primary-dark: #BA265D;
     --color-grey-light-1: #faf9f9;
@@ -28,8 +29,9 @@ html{
     box-sizing: border-box;
     font-size: 62.5%;
     font-family: 'Raleway', sans-serif;
-    background-color: #fff;
-    min-height: 100vh;    
+    background-color: #0a192f;
+    min-height: 100vh;
+    
 }
 
 body{
