--- a/src/scss/components.scss
+++ b/src/scss/components.scss
@@ -59,7 +59,7 @@
             list-style: none;
             position: absolute;
             top: 5rem;
-            right:10rem;
+            right:19rem;
             background-color: #dfdfdf;
             border-radius: 5px;
             opacity: 1;
@@ -221,6 +221,11 @@
                 margin: 0rem 0rem;
                 color: #ccd6f6;
             }
+
+            &__github:hover{
+                color: var(--primary-color2);
+            }
+
             &__folder{
                 height: 3.5rem;
                 width: 3.5rem;
@@ -263,6 +268,45 @@
 
     &__item:hover &__item__title {
         color: var(--primary-color2);
+    }
+}
+
+
+/////////////////////
+// Research
+
+.research{
+    color: rgb(73, 72, 72);
+    
+    margin: 1rem 12rem;
+
+    &__overview{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 10rem;
+
+        &__title{
+            color: #ccd6f6;
+            font-size: 25px;
+            margin-right: 15rem;
+        }
+        &__description{
+            color: #8892b0;
+            text-align: justify;
+            font-size: 20px;
+            width: 50rem;
+            
+        }
+    }
+
+    &__project{
+        color: #ccd6f6;
+        font-size: 25px;
+
+        &__fig{
+            width: 50rem;
+        }
     }
 }
 
